# medsafe-ai

./: README.md  app.py  gemini.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
data/: medicine_db.json
docs/: AI_DESIGN.md  API.md  ARCHITECTURE.md  DATABASE.md  EVALUATION.md  PRD.md  SECURITY.md  SRS.md  licensing.md
tests/: test_integration.py  test_llm_helper.py  test_medicine_db.py  test_ocr_helper.py
utils/: llm_helper.py
views/: dashboard.py  interaction_checker.py  medicine_info.py  prescription_ocr.py  symptom_solver.py
